<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:layout_margin="30dp"
    app:cardCornerRadius="50dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/car_card_design"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/car_image"
            android:layout_width="225dp"
            android:layout_height="114dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="56dp"
            android:src="@drawable/car_three"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/car_type"
            android:layout_width="134dp"
            android:layout_height="29dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="44dp"
            android:fontFamily="@font/crimson_text_bold"
            android:text="@string/blue_kia_cerato"
            android:textColor="#1f1f1f"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/car_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/crimson_text"
            android:text="@string/from_199_day"
            android:textColor="#1f1f1f"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/car_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:fontFamily="@font/crimson_text"
            android:text="@string/_18_deals"
            android:textColor="#4bb293"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/car_rating"
            android:layout_width="73dp"
            android:layout_height="28dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rating_bg"
            android:drawableStart="@drawable/ic_baseline_grade_24"
            android:drawableLeft="@drawable/ic_baseline_grade_24"
            android:drawablePadding="5dp"
            android:fontFamily="@font/crimson_text_bold"
            android:paddingHorizontal="5dp"
            android:text="@string/_4_5"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.063" />

        <ImageView
            android:id="@+id/car_select"
            android:layout_width="67dp"
            android:layout_height="40dp"
            android:background="@drawable/navigate_bg"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_navigate_next_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.996"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>